# tree-sitter-utils

./: Cargo.toml  README.md
src/: predicates.rs
